[OPAL 688] Implement ErrorHandler & Title page translations
Implement error handler throughout individual and group report controllers
Implement initial translation support fr/en for patient reports title page

--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -12,7 +12,7 @@
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-8 title-content">
                             <span class="fa fa fa-file-text"></span>
-                            <h1><strong>{{'PATIENTREPORT.TITLE'|translate}}</strong></h1>
+                            <h1><strong>{{'PATIENTREPORT.TITLE.MAIN'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-4 title-breadcrumbs">
@@ -24,8 +24,7 @@
 							<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                 				<span style="background-color:#e6edfa; padding: 0 10px;">
 									<span class="glyphicon glyphicon-menu-down"></span>
-                                    <!--<h2>{{'PATIENTS.MENU.SUB_TITLE'|translate}}</h2>-->
-                                    <h2>Generate Opal Patient Reports</h2>
+                                    <h2>{{'PATIENTREPORT.TITLE.INTRODUCTION'|translate}}</h2>
                                 </span>
 							</div>
 						</div>
@@ -39,12 +38,10 @@
                                             <span class="fa fa-user-plus"></span>
                                         </div>
                                         <div class="panel-title">
-                                            <!-- <h1>{{'PATIENTS.MENU.REGISTRATION'|translate}}</h1> -->
-                                            <h1>Individual Report</h1>
+                                            <h1>{{'PATIENTREPORT.TITLE.INDIVIDUAL'|translate}}</h1>
                                         </div>
                                         <div class="panel-description">
-                                           <!-- <p>{{'PATIENTS.MENU.REGISTRATION_SUB'|translate}}</p> -->
-                                           <p>Used for individual patient statistics</p>
+                                           <p>{{'PATIENTREPORT.TITLE.INDIVIDUAL_DESC'|translate}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -58,12 +55,10 @@
                                             <span class="fa fa-user-plus"></span>
                                         </div>
                                         <div class="panel-title">
-                                            <!-- <h1>{{'PATIENTS.MENU.REGISTRATION'|translate}}</h1> -->
-                                            <h1>Group Report</h1>
+                                            <h1>{{'PATIENTREPORT.TITLE.GROUP'|translate}}</h1>
                                         </div>
                                         <div class="panel-description">
-                                           <!-- <p>{{'PATIENTS.MENU.REGISTRATION_SUB'|translate}}</p> -->
-                                           <p>Used for group reporting statistics</p>
+                                           <p>{{'PATIENTREPORT.TITLE.GROUP_DESC'|translate}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -71,18 +66,6 @@
                         </a>
                         
                     </div>
-                    
-                       <!-- <h1>Generate Opal Reports</h1>
-                        <div id="tab" class="tab">
-                           <span class="col-xs-12 col-sm-6 col-md-4 ng-scope"><button class="tablinks" ng-click="goToIndividual();">Individual Patient Reports</button></span>
-                            <button class="tablinks" ng-click="goToGroup();">Group Patient Reports</button>
-                        </div>-->
-                        
-                    <!-- Load main table -->
-                    <!--<div class="iframe-container">
-                        <iframe id="serviceFrameSend" src="templates/patient-report/main-report.html" class="responsive-iframe">
-                        </iframe>
-                    </div>-->
                 </div>
             </div>
         </div>
