--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -1,11 +1,11 @@
 <div id="main">
-    <div id="top">
+    <div id="top" class="home-main patient-main">
         <div class="clearfix">
             <div class="row">
                 <!-- Load side menu -->
                 <div id="side-panel-scrollbar" class="col-lg-2">
-                    <div ng-include="'templates/patient/menu-side.html'"></div>
-                </div>
+					<div ng-include="'templates/side-panel-menu.html'"></div>
+				</div>
                 <!-- Right side detail view -->
                 <div class="col-lg-10 animated fadeIn">
                     <div class="row main-title">
