[Opal 688] Fix card layout in patient reports menu page

--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -30,8 +30,8 @@
 						</div>
                     </div>
                     <div class="row">
-                        <a href="" target="_blank">
-                            <div class="panel-container animated" style="width:40%;" ng-click="goToIndividual();" style="cursor:pointer;">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="panel-container animated" ng-click="goToIndividual();" style="cursor:pointer;">
                                 <div class="panel-info">
                                     <div class="panel-content">
                                         <div class="icon-home clearfix">
@@ -46,9 +46,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
-                        <a href="" target="_blank">
-                            <div class="panel-container animated" style="width:40%;" ng-click="goToGroup();" style="cursor:pointer;">
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="panel-container animated" ng-click="goToGroup();" style="cursor:pointer;">
                                 <div class="panel-info">
                                     <div class="panel-content">
                                         <div class="icon-home clearfix">
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
                         
                     </div>
                 </div>
